Rename to Debug Inspector

--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -672,11 +672,11 @@ We believe we've only just scratched the surface of what's possible with Templat
 
 ServiceStack's [existing free-quota restrictions](https://servicestack.net/download#free-quotas) only applies if you're using OrmLite, ServiceStack.Redis or exceed the allowed free-quota of ServiceStack Services.
 
-## Metadata Debug Templates
+## Debug Inspector
 
 [![](http://templates.servicestack.net/assets/img/screenshots/metadata-debug.png)](http://templates.servicestack.net/metadata/debug)
 
-All ServiceStack Apps now have access to rich introspection and queryability for inspecting remote ServiceStack instances with the new [Metadata Debug Template](http://templates.servicestack.net/docs/info-filters#debug-template).
+All ServiceStack Apps now have access to rich introspection and queryability for inspecting remote ServiceStack instances with the new [Metadata Debug Inspector](http://templates.servicestack.net/docs/info-filters#debug-template).
 
 The Debug Template is a Service in `TemplatePagesFeature` that's pre-registered in [DebugMode](http://docs.servicestack.net/debugging#debugmode). The Service can also be available when not in **DebugMode** by enabling it with:
 
