--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -2693,7 +2693,7 @@ Plugins.Add(new TemplatePagesFeature {
 });
 ```
 
-This also now the preferred way to enable the [Metadata Debug Template](/debugging#metadata-debug-template) in production, which 
+This also now the preferred way to enable the [Debug Inspector](/debugging#debug-inspector) in production, which 
 is only available in `DebugMode` by default:
 
 ```csharp
