--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -1155,7 +1155,7 @@ used in [Special string argument syntax](http://templates.servicestack.net/docs/
 escaping behavior is most useful:
 
 ```
-{{ [3,4,5] | select: { it | incrBy(10) }\n }}
+{% raw %}{{ [3,4,5] | select: { it | incrBy(10) }\n }}{% endraw %}
 ```
 
 
