--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -26,7 +26,7 @@ within a Windows Desktop Application.
 
 `app` includes a number of features and deep integration with GitHub that makes running .NET Core Chromium Desktop Apps a seamless experience. 
 
-To illustrate this we can install any .NET Core project from GitHub by specifying the name of the GitHub project and using `--source` to specify
+To illustrate this we can install any .NET Core project from GitHub by specifying the name of the GitHub project with `--source` to specify
 which GitHub **User** or **Organization** to install it from. If you don't have a .NET Core Application on-hand to try it on you can use
 any of [ServiceStack's .NET Core Templates](https://github.com/NetCoreTemplates) which are functioning .NET Core projects in their own right. 
 
