--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -350,7 +350,7 @@ Which can either be run on the command-line with:
 
 Or by double-clicking the **Blog Web App** Desktop shortcut.
 
-Running the **blog** App for the first time will create a new `blog.sqlite` database seeded with meta content describing itself :)
+Running the **blog** App for the first time will create a new `blog.sqlite` database seeded with meta content describing itself:
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/blog-screenshot.png)
 
