--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -539,7 +539,7 @@ In this case we want to generate SVG spirals by drawing a `circle` at each point
 [Archimedean spiral function](https://stackoverflow.com/a/6824451/85785) which was initially used as a base and with the help of the live REPL was 
 quickly able to apply some constants to draw the **tall & narrow** spirals we want:
 
-```hb
+```hbs
 {% raw %}<svg height="640" width="240">
 {{#each range(180) }}
   {{ 120 + 100 * cos((1) * it * 0.02827) | assignTo: x }}
@@ -556,7 +556,7 @@ We can further explore different spirals by modifying `x` and `y` cos/sin consta
 Out of the spirals we've seen lets pick one of the interesting ones and add it to our `index.html`, let's also enhance them by modifying the `fill` and
 `radius` properties with different weightings and compare them side-by-side:
 
-```hb
+```hbs
 {% raw %}<svg height="640" width="240">
 {{#each range(180) }}
   {{ 120 + 100 * cos((5) * it * 0.02827) | assignTo: x }}
@@ -593,7 +593,7 @@ Great, hitting `save` again will show us the effects of each change side-by-size
 Now that we have the effect that we want, let's go back to the debug inspector and see what a number of different spirals look side-by-side
 by wrapping our last svg snippet in another each block:
 
-```hb
+```hbs
 {% raw %}<table>{{#each i in range(0, 4) }}
 <svg height="640" width="240">
 {{#each range(180) }}
@@ -617,7 +617,7 @@ to quickly discover new aesthetically pleasing patterns :)
 
 Let's go back to our App and embody our multi spiral viewer in a new `multi.html` page containing:
 
-```hb
+```hbs
 {% raw %}{{#each i in range(0, 4) }}
 <svg height="640" width="240">
 {{#each range(180) }}
@@ -631,7 +631,7 @@ Let's go back to our App and embody our multi spiral viewer in a new `multi.html
 
 Then make it navigable by adding a link to our new page in the `_layout.html` menu:
 
-```hb
+```hbs
 {% raw %}{{ 'menu' | partial({
      '/':           'Home',
      '/multi':      'Multi',
@@ -652,7 +652,7 @@ by animating different properties on the generated SVG circles.
 As we have to wait for the animation to complete before trying out different effects, we won't benefit from Debug Inspector's live REPL
 so let's jump straight in and create a new `animated.html` and add a link to it in the menu:
 
-```hb
+```hbs
 {% raw %}{{ 'menu' | partial({
      '/':           'Home',
      '/multi':      'Multi',
@@ -666,7 +666,7 @@ Then populate it with a copy of `multi.html` and sprinkle in some `<animate>` el
 We're entering the "creative process" of our App where we can try out different values, hit **Save** and watch the effects of our tuning eventually 
 arriving at a combination we like:
 
-```hb
+```hbs
 {% raw %}{{#each i in range(0, 4) }}
 <svg height="640" width="240">
 {{#each range(180) }}
@@ -693,7 +693,7 @@ Although hard to capture in a screenshot, we can sit back and watch our living, 
 
 Lets expand our App beyond these static Spirals by enabling some navigation, this is easily done by adding the snippet below on the top of the home page:
 
-```hb
+```hbs
 {% raw %}{{ from ?? 1 | toInt | assignTo: from }}
 <div style="text-align:right;margin:-54px 0 30px 0">
   {{#if from > 1}} <a href="?from={{ max(from-1,0) }}" title="{{max(from-1,0)}}">previous</a> |{{/if}}
@@ -703,7 +703,7 @@ Lets expand our App beyond these static Spirals by enabling some navigation, thi
 
 Whilst the `multi.html` and `animated.html` pages can skip by 4:
 
-```hb
+```hbs
 {% raw %}{{ from ?? 1 | toInt | assignTo: from }}
 <div style="text-align:right;margin:-54px 0 30px 0">
   {{#if from > 1}} <a href="?from={{ max(from-4,0) }}" title="{{max(from-1,0)}}">previous</a> |{{/if}}
@@ -713,7 +713,7 @@ Whilst the `multi.html` and `animated.html` pages can skip by 4:
 
 Then changing the `index.html` SVG fragment to use the `from` value on the y-axis:
 
-```hb
+```hbs
 {% raw %}<svg height="640" width="240">
 {{#each range(180) }}
   {{ 120 + 100 * cos((5)    * it * 0.02827) | assignTo: x }}
@@ -725,7 +725,7 @@ Then changing the `index.html` SVG fragment to use the `from` value on the y-axi
 
 Whilst the `multi.html` and `animated.html` pages can use it in its `range(from, 4)` function:
 
-```hb
+```hbs
 {% raw %}{{#each i in range(from, 4) }}
 <svg height="640" width="240">
 {{#each range(180) }}
@@ -740,7 +740,7 @@ Whilst the `multi.html` and `animated.html` pages can use it in its `range(from,
 With navigation activated we can quickly scroll through and explore different spirals. To save ourselves the effort of finding them again lets
 catalog our favorite picks and add them to a bookmarked list at the bottom of the page. Here are some interesting ones I've found for the home page:
 
-```hb
+```hbs
 {% raw %}<div>
   Jump to favorites: 
   {{#each [1,5,101,221,222,224,298,441,443,558,663,665,666,783,888] }}
@@ -751,7 +751,7 @@ catalog our favorite picks and add them to a bookmarked list at the bottom of th
 
 and my top picks for the `multi.html` and `animated.html` pages:
 
-```hb
+```hbs
 {% raw %}<div>
   Jump to favorites: 
   {{#each [1,217,225,229,441,449,661,669,673,885,1338,3326,3338,4330,8662,9330,11998] }}
