--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -582,7 +582,7 @@ Out of the spirals we've seen lets pick one of the interesting ones and add it t
 </svg>{% endraw %}
 ```
 
-As there's no links back to home from `/metadata` pages you can use `ALT+LEFT` shortcut key to navigate back to the home page.
+> As there's no links back to home from `/metadata` pages you can use `ALT+LEFT` shortcut key to navigate back to the home page.
 
 Great, hitting `save` again will show us the effects of each change side-by-size:
 
@@ -605,7 +605,7 @@ by wrapping our last svg snippet in another each block:
 {{/each}}{% endraw %}
 ```
 
-We can prefix the our snippet with `<table>` as a temp workaround to force them to display side-by-side in the Debug Inspector. In order to 
+We can prefix our snippet with `<table>` as a temp workaround to force them to display side-by-side in Debug Inspector. In order to 
 for spirals to distort we'll only change 1 of the axis, as they're tall & narrow lets explore along the y-axis:
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/spirals/multi-01.png)
