--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -26,9 +26,9 @@ within a Windows Desktop Application.
 
 `app` includes a number of features and deep integration with GitHub that makes running .NET Core Chromium Desktop Apps a seamless experience. 
 
-To illustrate this we can install any .NET Core project from GitHub by specifying the name of the GitHub project with `--source` to specify
-which GitHub **User** or **Organization** to install it from. If you don't have a .NET Core Application on-hand to try it on you can use
-any of [ServiceStack's .NET Core Templates](https://github.com/NetCoreTemplates) which are functioning .NET Core projects in their own right. 
+To illustrate this we can install any .NET Core project from GitHub by specifying the project's name along with the name of 
+the GitHub **User** or **Organization** via the `--source` argument. If you don't have a .NET Core Application on-hand to try it on, you can use
+any of [ServiceStack's .NET Core Templates](https://github.com/NetCoreTemplates) which are all functioning .NET Core projects in their own right. 
 
 Where we can install the [NetCoreTemplates/mvc](https://github.com/NetCoreTemplates/mvc) project with:
 
