--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -780,7 +780,7 @@ declaratively by just generating SVG markup.
 
 As Bret Victor shows us in his seminal [Inventing on Principle](https://vimeo.com/36579366) presentation, being able to immediately visualize 
 changes gives us a deep connection and intuition with our creations that's especially important when creating visual software like UIs where 
-the rapid iterations lets us try out and perfect different ideas in the moment as soon as we can think of them.
+the rapid iterations lets us try out and perfect different ideas in the moment, as soon as we can think of them.
 
 It's a good example of the type of App that would rarely be considered to be created with a native GUI toolkit and 2D drawing API, the amount
 of effort and friction to achieve the same result would take the enjoyment out of the experience and the end result would have much less utility
@@ -795,7 +795,7 @@ Anyone will then be able to install your App by first downloading the `app` tool
 
     $ dotnet tool install -g app
 
-Then running `install` with the name of the **repo** and your GitHub **User** or **Organization** name in the `--source` argument, e.g:
+Then running `install` with the name of the **repo** and your GitHub **User** or **Organization** name in the `--source` argument:
 
     $ app install spirals --source mythz
 
@@ -805,12 +805,12 @@ Which installs instantly thanks to the `7kb` .zip download that can then be open
 
 ### Publishing your App with binaries
 
-The unique characteristics of Web Apps affords us different ways of publishing your App, to save users from needing to install the 
+The unique characteristics of Web Apps affords us different ways of publishing your App, e.g. to save users from needing to install the 
 `app` tool you can run `publish` in your App's directory:
 
     $ app publish
 
-Which will copy your App to the `publish/app` folder and copy the `app` tool binaries in the `publish/cef` folder:
+Which will copy your App to the `publish/app` folder and the `app` tool binaries in the `publish/cef` folder:
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/app-publish.png)
 
@@ -820,7 +820,7 @@ If you know it will be in a fixed location you can update the **Target** and **S
 
 ![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/app-shortcut-properties.png)
 
-This includes all the `app` binaries needed to run Web Apps which compresses to **89 MB** in a `.zip` or **61 MB** in 7-zip `.7z` archive.
+This includes all `app` binaries needed to run Web Apps which compresses to **89 MB** in a `.zip` or **61 MB** in 7-zip `.7z` archive.
 
 ### Publishing a self-contained Windows 64 executable
 
