--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -82,15 +82,15 @@ By default this will list all [NetCoreWebApps](https://github.com/NetCoreWebApps
 
 ```
    1. redis           Redis Admin Viewer developed as Vue Client Single Page App
-   2. bare            Basic Bootstrap + jQuery multi-page Content Website with dynamic Menu Navigation + API pages
+   2. bare            Bootstrap + jQuery multi-page Website with dynamic Menu Navigation + API pages
    3. chat            Highly extensible App with custom AppHost leveraging OAuth + SSE for real-time Chat
    4. plugins         Extend WebApps with Plugins, Filters, ServiceStack Services and other C# extensions
-   5. blog            Minimal, multi-user Twitter OAuth blogging platform that can create living, powerful pages
+   5. blog            Minimal multi-user Twitter OAuth blogging platform that creates living powerful pages
    6. rockwind-aws    Rockwind Cloud Web App on AWS
    7. rockwind-azure  Rockwind Cloud Web App on Azure
    8. redis-html      Redis Admin Viewer developed as server-generated HTML Website
    9. spirals         Explore and generate different Spirals with SVG
-  10. rockwind        Example Web App combining multi-layout Rockstars website + data-driven Northwind Browser
+  10. rockwind        Web App combining multi-layout Rockstars website + data-driven Northwind Browser
 
 Usage: app install <name>
 ```
@@ -125,15 +125,15 @@ NetCoreTemplates:
 NetCoreWebApps:
 
    1. redis           Redis Admin Viewer developed as Vue Client Single Page App
-   2. bare            Basic Bootstrap + jQuery multi-page Content Website with dynamic Menu Navigation + API pages
+   2. bare            Bootstrap + jQuery multi-page Website with dynamic Menu Navigation + API pages
    3. chat            Highly extensible App with custom AppHost leveraging OAuth + SSE for real-time Chat
    4. plugins         Extend WebApps with Plugins, Filters, ServiceStack Services and other C# extensions
-   5. blog            Minimal, multi-user Twitter OAuth blogging platform that can create living, powerful pages
+   5. blog            Minimal multi-user Twitter OAuth blogging platform that creates living powerful pages
    6. rockwind-aws    Rockwind Cloud Web App on AWS
    7. rockwind-azure  Rockwind Cloud Web App on Azure
    8. redis-html      Redis Admin Viewer developed as server-generated HTML Website
    9. spirals         Explore and generate different Spirals with SVG
-  10. rockwind        Example Web App combining multi-layout Rockstars website + data-driven Northwind Browser
+  10. rockwind        Web App combining multi-layout Rockstars website + data-driven Northwind Browser
 
 Usage: app install <name>
 ```
@@ -300,15 +300,15 @@ Will return the list of publicly available Web Apps:
 
 ```
    1. redis           Redis Admin Viewer developed as Vue Client Single Page App
-   2. bare            Basic Bootstrap + jQuery multi-page Content Website with dynamic Menu Navigation + API pages
+   2. bare            Bootstrap + jQuery multi-page Website with dynamic Menu Navigation + API pages
    3. chat            Highly extensible App with custom AppHost leveraging OAuth + SSE for real-time Chat
    4. plugins         Extend WebApps with Plugins, Filters, ServiceStack Services and other C# extensions
-   5. blog            Minimal, multi-user Twitter OAuth blogging platform that can create living, powerful pages
+   5. blog            Minimal multi-user Twitter OAuth blogging platform that creates living powerful pages
    6. rockwind-aws    Rockwind Cloud Web App on AWS
    7. rockwind-azure  Rockwind Cloud Web App on Azure
    8. redis-html      Redis Admin Viewer developed as server-generated HTML Website
    9. spirals         Explore and generate different Spirals with SVG
-  10. rockwind        Example Web App combining multi-layout Rockstars website + data-driven Northwind Browser
+  10. rockwind        Web App combining multi-layout Rockstars website + data-driven Northwind Browser
 
 Usage: app install <name>
 ```
