--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -1032,7 +1032,7 @@ Which can also be deployed from the Windows Command Prompt using a remote SSH co
 
     ssh -t deploy@web-app.io "cd /home/deploy/apps && sudo /home/deploy/.dotnet/tools/web install spirals --source mythz && sudo supervisorctl restart app-spirals"
 
-Where it can now be run using WSL's bash:
+Where App updates can be performed with a single WSL bash command:
 
     $ bash deploy-spirals.sh
 
