--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -586,7 +586,7 @@ Out of the spirals we've seen lets pick one of the interesting ones and add it t
 
 Great, hitting `save` again will show us the effects of each change side-by-size:
 
-![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/spirals/single-fill-radius.png)
+[![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/spirals/single-fill-radius.png)](http://spirals.web-app.io)
 
 ### Multiplying
 
@@ -642,7 +642,7 @@ Then make it navigable by adding a link to our new page in the `_layout.html` me
 
 Where upon save, our creation will reveal itself in the App's menu:
 
-![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/spirals/multi.png)
+[![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/spirals/multi.png)](http://spirals.web-app.io/multi)
 
 ### Animating
 
@@ -769,7 +769,7 @@ Now it's just a matter of signing off our digital piece by giving it a name in y
 Which replaces the name in the `menu` and used in any shortcuts that are created, and with those finishing touches our App's journey
 into the rich colorful world of SVG is complete:
 
-![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/spirals/spiral-nav.png)
+[![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/app/spirals/spiral-nav.png)](http://spirals.web-app.io/animated)
 
 ### Recap
 
@@ -1091,7 +1091,7 @@ are created with a copy of the global configuration so it's no longer accessed w
 
 ### Global Configuration
 
-To enforce that global configuration should only be initialized on once on Startup so it remains immutable at runtime you can use the new `JsConfig.Init()`:
+To enforce that global configuration should only be initialized on once on Startup so it remains immutable at runtime you can use the new `JsConfig.Init()` API:
 
 ```csharp
 JsConfig.Init(new Config {
