--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -3,8 +3,8 @@ title: v5.4 Release Notes
 slug: v5-4
 ---
 
-This ended up being our funnest releases in which we've built upon significant enhancements made to Templates in our 
-[last release](/releases/v5.2) just a few weeks ago, to create some fun an exciting solutions which we're super excited to share:
+This ended up being our funnest releases in which we've built upon [significant enhancements](/releases/v5.2#servicestack-templates-remastered) 
+made to Templates in our [last release](/releases/v5.2) just a few weeks ago, to create some fun an exciting solutions which we're super excited to share:
 
 ## .NET Core Windows Desktop Apps!
 
@@ -268,7 +268,7 @@ Ultimately what "Web Desktop Apps" provide most is value, with easy access to ad
 
 Of course if you can offer software hosted on the Internet that would typically be the preferred approach for increased accessibility, maintainability 
 and reach to your Software. But there's a number of use-cases that would benefit from a Desktop App, e.g. any offline tasks, management of personal data, 
-access to Native Desktop features, local computing and infrastructure resources or to avoid maintenance and management a central hosted server. 
+access to Native Desktop features, local computing and infrastructure resources or to avoid maintenance and management of a central hosted server. 
 
 Places where you're using Windows Services could be better served as a unified Packaged Desktop App where you can ensure consistent behavior
 by using the same tested Chrome rendering engine to run your App, mitigating any environment, versions and cross-browser issues.
