--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -582,7 +582,7 @@ Out of the spirals we've seen lets pick one of the interesting ones and add it t
 </svg>{% endraw %}
 ```
 
-> As there's no links back to home from `/metadata` pages you can use `ALT+LEFT` shortcut key to navigate back to the home page.
+> You can use `ALT+LEFT` + `ALT+RIGHT` shortcut keys to navigate back and forward to the home page.
 
 Great, hitting `save` again will show us the effects of each change side-by-size:
 
