--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -395,7 +395,7 @@ Where it will open a [Redis Admin UI](http://redis.web-app.io) connected to your
 Likewise we can also configure any nested `CefConfig.CefSettings` using an object literal. We can use this to view verbose logging messages by
 telling `app` not to hide the Console Window and changing CEF's LogSeverity to Verbose:
 
-    CefConfig { Width:1200, Height:1200, HideConsoleWindow:true }
+    CefConfig { Width:1200, Height:1200, HideConsoleWindow:false }
     CefConfig.CefSettings { LogSeverity:'Verbose' }
 
 Now when running the App we can see the CEF's verbose logging messages mixed in with request logs from .NET Core:
@@ -1044,7 +1044,7 @@ and make it easy for everyone else to discover and use.
 
 ## Google Auth Provider
 
-The `GoogleOAuth2Provider` has been updated to resolve a change [Google made to their OAuth endpoints](https://github.com/GoogleCloudPlatform/google-cloud-common/issues/260) which required moving toa hybrid solution to by-pass 
+The `GoogleOAuth2Provider` has been updated to resolve a change [Google made to their OAuth endpoints](https://github.com/GoogleCloudPlatform/google-cloud-common/issues/260) which required moving to a hybrid solution to by-pass 
 DotNetOpenAuth to handle the last pass of the OAuth flow.
 
 In addition we've created a new `GoogleAuthProvider` without any dependencies to DotNetOpenAuth so it can be used in both .NET Framework
