--- a/docs/_releases/v5.4.md
+++ b/docs/_releases/v5.4.md
@@ -442,7 +442,7 @@ Thanks to the easy distribution all users can update to the latest version of an
  
 Which will replace their existing version with the latest release. 
 
-## Creating Web Apps
+## Creating Desktop Web Apps
 
 Now that we've seen how easy it is to Install and use existing Web Apps, lets walk through how easy it to create one of our own.
 
