--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -4522,8 +4522,8 @@ it will use the connection configured for that request.
 You can also specify to use a different DB connection using the `namedConnection` and `connectionString` arguments:
 
 ```hbs
-{{ sql | dbSelect({ namedConnection }) }}
-{{ sql | dbSelect({ connectionString:sqlServerConnString, provider:"mssql" }) }}
+{% raw %}{{ sql | dbSelect({ namedConnection }) }}
+{{ sql | dbSelect({ connectionString:sqlServerConnString, provider:"mssql" }) }}{% endraw %}
 ```
 
 Both Named Connections and Dialect providers can be registered in your `IDbConnectionFactory`, e.g:
