--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -1323,6 +1323,8 @@ Line Items
 
 And because they're GitHub Flavored Markdown Tables they can be embedded directly in Markdown docs (like this) where it's renders as:
 
+{% capture md_table %}
+
 | Order Details                    ||
 |------------------|----------------|
 | Id               | 10643          |
@@ -1352,6 +1354,11 @@ Line Items
 | $378.00      |
 | $24.00       |
 
+{% endcapture %}
+
+<div class="markdown-body">
+{{ md_table }}
+</div>
 
 ### AWS Dashboards
 
@@ -1766,6 +1773,8 @@ This doesn't impact page based routing as the path info arguments are explicitly
 
 To make it accessing the Request Params as easy as possible we've added a number of new methods to access it in a variety of different ways:
 
+{% capture query_table %}
+
 | Query Methods         |                | Description                                                          |
 |-----------------------|----------------|----------------------------------------------------------------------|
 | formQuery(name)       | -> string      | FormData[name] ?? QueryString[name]                                  |
@@ -1777,6 +1786,12 @@ To make it accessing the Request Params as easy as possible we've added a number
 | formValue(name)       | -> string      | if (hasError) FormData[name] ?? QueryString[name]                    |
 | formValues(name)      | -> string[]    | if (hasError) FormData[name] ?? QueryString[name]                    |
 | formCheckValue(name)  | -> bool        | formValue(name) == "true" || "t" || "on" || "1"                      |
+
+{% endcapture %}
+
+<div class="markdown-body">
+{{ query_table }}
+</div>
 
 Here's a flavor of how of using the different APIs above:
 
