--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -281,9 +281,9 @@ couple of exciting new project templates...
 
 Developing Single Page Apps can often feel like a compromise, on the one hand premier JS frameworks like [Vue](https://vuejs.org) and 
 [React](https://reactjs.org/) have offered unprecedented simplicity and elegance in developing rich and reactive Single Page Apps on the Web, 
-on the other hand you have to start from:
+on the other hand you have to [start from](https://twitter.com/dylanbeattie/status/1098204272653676544):
 
-![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/spa/create-react-app.png)
+[![](https://raw.githubusercontent.com/ServiceStack/docs/master/docs/images/spa/create-react-app.png)](https://twitter.com/dylanbeattie/status/1098204272653676544)
 
 This is the result of [npm's culture for hyper modularization into micro modules](https://www.davidhaney.io/npm-left-pad-have-we-forgotten-how-to-program/) 
 where often these dependencies only contain a single function, in some cases something as simple as checking if a number is positive is an npm package all by itself with a 
