--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -1323,7 +1323,7 @@ Line Items
 
 And because they're GitHub Flavored Markdown Tables they can be embedded directly in Markdown docs (like this) where it's renders as:
 
-{% capture md_table %}
+{{ "<div class='markdown-body'>" }}
 
 | Order Details                    ||
 |------------------|----------------|
@@ -1354,11 +1354,7 @@ Line Items
 | $378.00      |
 | $24.00       |
 
-{% endcapture %}
-
-<div class="markdown-body">
-{{ md_table }}
-</div>
+{% "</div>" %}
 
 ### AWS Dashboards
 
@@ -1773,7 +1769,7 @@ This doesn't impact page based routing as the path info arguments are explicitly
 
 To make it accessing the Request Params as easy as possible we've added a number of new methods to access it in a variety of different ways:
 
-{% capture query_table %}
+{{ "<div class='markdown-body'>" }}
 
 | Query Methods         |                | Description                                                          |
 |-----------------------|----------------|----------------------------------------------------------------------|
@@ -1787,11 +1783,7 @@ To make it accessing the Request Params as easy as possible we've added a number
 | formValues(name)      | -> string[]    | if (hasError) FormData[name] ?? QueryString[name]                    |
 | formCheckValue(name)  | -> bool        | formValue(name) == "true" || "t" || "on" || "1"                      |
 
-{% endcapture %}
-
-<div class="markdown-body">
-{{ query_table }}
-</div>
+{{ "</div>" }}
 
 Here's a flavor of how of using the different APIs above:
 
