try as includes

--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -1323,38 +1323,9 @@ Line Items
 
 And because they're GitHub Flavored Markdown Tables they can be embedded directly in Markdown docs (like this) where it's renders as:
 
-{{ "<div class='markdown-body'>" }}
-
-| Order Details                    ||
-|------------------|----------------|
-| Id               | 10643          |
-| Order Date       | 1997-08-25     |
-| Customer Id      | ALFKI          |
-| Freight          | 29.46          |
-| Employee Id      | 6              |
-| Ship Via         | Speedy Express |
-| Ship Address     | Obere Str. 57  |
-| Ship City        | Berlin         |
-| Ship Postal Code | 12209          |
-| Ship Country     | Germany        |
-
-
-Line Items
-
-| # | Product Name      | Unit Price | Quantity | Discount |
-|---|-------------------|------------|----------|----------|
-| 1 | Rössle Sauerkraut | $45.60     | 15       | 0.25     |
-| 2 | Chartreuse verte  | $18.00     | 21       | 0.25     |
-| 3 | Spegesild         | $12.00     | 2        | 0.25     |
-
-
-| Order Totals |
-|--------------|
-| $684.00      |
-| $378.00      |
-| $24.00       |
-
-{{ "</div>" }}
+<div class='markdown-body'>
+{% include markdown/textDump.md %}
+</div>
 
 ### AWS Dashboards
 
@@ -1769,21 +1740,9 @@ This doesn't impact page based routing as the path info arguments are explicitly
 
 To make it accessing the Request Params as easy as possible we've added a number of new methods to access it in a variety of different ways:
 
-{{ "<div class='markdown-body'>" }}
-
-| Query Methods         |                | Description                                                          |
-|-----------------------|----------------|----------------------------------------------------------------------|
-| formQuery(name)       | -> string      | FormData[name] ?? QueryString[name]                                  |
-| formQueryValues(name) | -> string[]    | FormData[name]                                                       |
-| httpParam(name)       | -> string      | Headers[X-name] ?? QueryString[name] ?? FormData[name] ?? Item[name] |
-| queryString           | -> string      | $"?{QueryString.ToString()}"                                         |
-| queryDictionary       | -> Dictionary  | QueryString.ToObjectDictionary()                                     |
-| formDictionary        | -> Dictionary  | FormData.ToObjectDictionary()                                        |
-| formValue(name)       | -> string      | if (hasError) FormData[name] ?? QueryString[name]                    |
-| formValues(name)      | -> string[]    | if (hasError) FormData[name] ?? QueryString[name]                    |
-| formCheckValue(name)  | -> bool        | formValue(name) == "true" || "t" || "on" || "1"                      |
-
-{{ "</div>" }}
+<div class='markdown-body'>
+{% include markdown/requestParamMethods.md %}
+</div>
 
 Here's a flavor of how of using the different APIs above:
 
