--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -1324,7 +1324,8 @@ Line Items
 And because they're GitHub Flavored Markdown Tables they can be embedded directly in Markdown docs (like this) where it's renders as:
 
 <div class='markdown-body'>
-{% include markdown/textDump.md %}
+{% capture textDump %}{% include markdown/textDump.md %}{% endcapture %}
+{{ textDump | markdownify }}
 </div>
 
 ### AWS Dashboards
@@ -1741,7 +1742,8 @@ This doesn't impact page based routing as the path info arguments are explicitly
 To make it accessing the Request Params as easy as possible we've added a number of new methods to access it in a variety of different ways:
 
 <div class='markdown-body'>
-{% include markdown/requestParamMethods.md %}
+{% capture requestParamMethods %}{% include markdown/requestParamMethods.md %}{% endcapture %}
+{{ requestParamMethods | markdownify }}
 </div>
 
 Here's a flavor of how of using the different APIs above:
