--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -348,11 +348,11 @@ If you previously had an existing `web` tool installed, update it to the latest 
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/vue-lite.png)](https://github.com/NetCoreTemplates/vue-lite)
 
-Browse [source code](https://github.com/NetCoreTemplates/vue-lite), view [vue-lite.web-templates.io](http://vue-lite.web-templates.io) live demo and install with:
+Browse [source code](https://github.com/NetCoreTemplates/vue-lite), view [vue-lite.web-templates.io](http://vue-lite.web-templates.io) live demo and install for **.NET Core** with:
 
     $ web new vue-lite ProjectName
 
-Alternatively you can create an ASP.NET Core 2.1 LTS project on .NET Framework with:
+Alternatively you can create an ASP.NET Core 2.1 LTS project on **.NET Framework** with:
 
     $ web new vue-lite-corefx ProjectName
 
@@ -360,11 +360,11 @@ Alternatively you can create an ASP.NET Core 2.1 LTS project on .NET Framework w
 
 [![](https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/react-lite.png)](https://github.com/NetCoreTemplates/react-lite)
 
-Browse [source code](https://github.com/NetCoreTemplates/react-lite), view [react-lite.web-templates.io](http://react-lite.web-templates.io) live demo and install with:
+Browse [source code](https://github.com/NetCoreTemplates/react-lite), view [react-lite.web-templates.io](http://react-lite.web-templates.io) live demo and install for **.NET Core** with:
 
     $ web new react-lite ProjectName
 
-Alternatively you can create an ASP.NET Core 2.1 LTS project on .NET Framework with:
+Alternatively you can create an ASP.NET Core 2.1 LTS project on **.NET Framework** with:
 
     $ web new react-lite-corefx ProjectName
 
