--- a/docs/_releases/v5.5.md
+++ b/docs/_releases/v5.5.md
@@ -1062,8 +1062,8 @@ to upgrade to a multi-project solution.
 
 ### Updating "lite" project dependencies
 
-We've also enabled a novel approach for updating your "lite" project assemblies where instead of everyone maintaining their own bespoke
-configuration and a tool like **libman** for updating their local dependencies, **vue-lite** projects can just run:
+We've also enabled a novel approach for updating your "lite" project 3rd Party dependencies where instead of everyone maintaining their 
+own bespoke configuration and a tool like **libman** for updating their local dependencies, **vue-lite** projects can just run:
 
     $ web +vue-lite-lib
 
@@ -1073,7 +1073,7 @@ For **react-lite** projects, run:
 
     $ web +react-lite-lib
 
-We'll cover this in more detail when we cover our [`web` tool's](#web-tool) capabilities below.
+We'll cover how this works in more detail when we announce our [`web` tool's](#web-tool) new capabilities below.
 
 ## #Script!
 
