--- a/docs/_releases/v4.5.14.md
+++ b/docs/_releases/v4.5.14.md
@@ -586,7 +586,7 @@ public class AppHost : AppHostBase
 
     public override void Configure(Container container)
     {
-        Plugins.AddIfNotExists(new TemplatePagesFeature()); //Already added if it's running as a Web App
+        Plugins.AddIfNotExists(new SharpPagesFeature()); //Already added if it's running as a Web App
         
         Plugins.Add(new ServerEventsFeature());
 
@@ -621,7 +621,7 @@ public class AppHost : AppHostBase
 
 One nice thing from being able to reuse existing AppHost's is being able to develop all back-end C# Services and Custom Filters as a stand-alone .NET Core Project where it's more productive with access to .NET IDE tooling and debugging.
 
-To account for these 2 modes we use `AddIfNotExists` to only register the `TemplatePagesFeature` plugin 
+To account for these 2 modes we use `AddIfNotExists` to only register the `SharpPagesFeature` plugin 
 when running as a stand-alone App and add an additional constructor so it reuses the existing `app.settings` as its [IAppSettings](http://docs.servicestack.net/appsettings) provider for is custom App configuration like OAuth App keys required for enabling Sign-In's via with Twitter, Facebook and GitHub when running on `http://localhost:5000` as seen in Chat's [app.settings](https://github.com/NetCoreWebApps/chat/blob/master/app.settings).
 
 After the back-end has been implemented we can build and copy the compiled **Chat.dll** into the Chat's 
@@ -678,10 +678,10 @@ ServiceStack's [existing free-quota restrictions](https://servicestack.net/downl
 
 All ServiceStack Apps now have access to rich introspection and queryability for inspecting remote ServiceStack instances with the new [Metadata Debug Inspector](http://templates.servicestack.net/docs/info-filters#debug-template).
 
-The Debug Template is a Service in `TemplatePagesFeature` that's pre-registered in [DebugMode](http://docs.servicestack.net/debugging#debugmode). The Service can also be available when not in **DebugMode** by enabling it with:
+The Debug Template is a Service in `SharpPagesFeature` that's pre-registered in [DebugMode](http://docs.servicestack.net/debugging#debugmode). The Service can also be available when not in **DebugMode** by enabling it with:
 
 ```csharp
-Plugins.Add(new TemplatePagesFeature { 
+Plugins.Add(new SharpPagesFeature { 
     MetadataDebugAdminRole = RoleNames.Admin,        // Only allow Admin users
 })
 ```
@@ -698,7 +698,7 @@ Which will let you access it by appending the authsecret to the querystring: `/m
 Alternatively if preferred you can make the Debug Template Service available to all users with:
 
 ```csharp
-Plugins.Add(new TemplatePagesFeature { 
+Plugins.Add(new SharpPagesFeature { 
     MetadataDebugAdminRole = RoleNames.AllowAnyUser,  // Allow Authenticated Users
     MetadataDebugAdminRole = RoleNames.AllowAnon,     // Allow anyone
 })
@@ -781,7 +781,7 @@ var hasFoo = container.Exists<IFoo>();
 ```
 
 Both `Funq.Container` and `SimpleContainer` implement the `IContainer` interface which 
-[ServiceStack's TemplatePagesFeature](http://templates.servicestack.net/docs/view-engine) utilizes to replace the TemplateContext's built-in IOC to use Funq where it shares the same IOC instance and is able to resolve ServiceStack's AppHost dependencies.
+[ServiceStack's SharpPagesFeature](http://templates.servicestack.net/docs/view-engine) utilizes to replace the TemplateContext's built-in IOC to use Funq where it shares the same IOC instance and is able to resolve ServiceStack's AppHost dependencies.
 
 ### Fast, small, dependency-free IOC
 
