--- a/docs/_releases/v5.0.0.md
+++ b/docs/_releases/v5.0.0.md
@@ -811,8 +811,8 @@ The only .NET Core 2.0 project template not to have a .NET Framework equivalent 
 <tr>
     <td><a href="https://github.com/NetCoreTemplates/templates-webapp">templates-webapp</a></td>
     <td align="center">
-        <a href="http://templates-webapp.web-templates.io"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/templates-webapp.png" width="500" /></a>
-        <p><a href="http://templates-webapp.web-templates.io">templates-webapp.web-templates.io</a></p>
+        <a href="http://rockwind-webapp.web-templates.io/"><img src="https://raw.githubusercontent.com/ServiceStack/Assets/master/csharp-templates/templates-webapp.png" width="500" /></a>
+        <p><a href="http://rockwind-webapp.web-templates.io/">templates-webapp.web-templates.io</a></p>
     </td>
 </tr>
 </table>
