--- a/docs/_releases/v5.2.md
+++ b/docs/_releases/v5.2.md
@@ -2654,7 +2654,7 @@ Template Content its sent and returns the output:
 ```
 
 By default the `evalTemplate` filter renders Templates in a new `TemplateContext` which can be customized to utilize any additional 
-`plugins`, `filters` and `blocks` available in the configured [TemplatePagesFeature](http://templates.servicestack.net/docs/view-engine), 
+`plugins`, `filters` and `blocks` available in the configured [SharpPagesFeature](http://templates.servicestack.net/docs/view-engine), 
 or for full access you can use `{use:{context:true}}` to evaluate any Template content under the same context that `evalTemplate` is run on.
 
 ## Templates Admin Service
@@ -2686,7 +2686,7 @@ Which can be used to call 1 or more actions:
 By default it's only available to be called by **Admin** Users (or [AuthSecret](/debugging#authsecret)) but can be changed with:
 
 ```csharp
-Plugins.Add(new TemplatePagesFeature {
+Plugins.Add(new SharpPagesFeature {
     TemplatesAdminRole = RoleNames.AllowAnyUser, // Allow any Authenticated User to call /templates/admin
     //TemplatesAdminRole = RoleNames.AllowAnon,  // Allow anyone
     //TemplatesAdminRole = null,                 // Do not register /templates/admin service
@@ -2697,7 +2697,7 @@ This also now the preferred way to enable the [Debug Inspector](/debugging#debug
 is only available in `DebugMode` by default:
 
 ```csharp
-Plugins.Add(new TemplatePagesFeature {
+Plugins.Add(new SharpPagesFeature {
     MetadataDebugAdminRole = RoleNames.Admin,          // Only allow Admin users to call /metadata/debug
     //MetadataDebugAdminRole = RoleNames.AllowAnyUser, // Allow Authenticated Users
     //MetadataDebugAdminRole = RoleNames.AllowAnon,    // Allow anyone
